docs: README.md 구조 정리 및 간소화
- 556줄 → 309줄 (45% 축소)
- 기술 스택 나열형 → 테이블로 통합
- API 명세 HTTP 예시 제거, 엔드포인트 테이블 + Swagger 안내로 변경
- 기술적 도전 23개 → 13개로 정리 (LLM/백엔드/프론트엔드 그룹화)
- 개발 로드맵 체크박스 → 테이블로 압축